alteração na bio

--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
                     Quem sou eu
                 </h2>
                 <p class="p1">
-                    Meu nome é Gabriel Barcellos, sou Desenvolvedor Front-End. Atualmente faço faculdade de Análise e desenvolvimento de sistemas e cursos de desenvolvimento web.
+                    Meu nome é Gabriel Barcellos, sou Desenvolvedor Front-End. Atualmente faço cursos de Programador Fullstack JavaScript.
                 </p>
                 <p  class="p2">
-                    Iniciei meus estudos com desenvolvimento web em 2021, sou apaixanado por essa aréa e pretendo seguir minha carreira como Front-End Developer.
+                    Iniciei meus estudos com desenvolvimento web em 2021, sou apaixanado por essa aréa e pretendo seguir minha carreira como Desenvolvedor.
                 </p>
 
                 <p  class="p3">
@@ -94,7 +94,7 @@
 
                 </p>
                 <p  class="p4">
-                    Consigo obter soluções para problemas com facilidade e perceber oportunidades de negócios. Habilidades interpessoais e conhecimento diversificado são meus principais diferenciais 
+                    Consigo obter soluções para problemas com facilidade e perceber oportunidades de negócios. Habilidades interpessoais e conhecimento diversificado são meus principais diferenciais.
                 </p>
             </div>
         </div>
