alterando palavra escrito errado

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     Meu nome é Gabriel Barcellos, sou Desenvolvedor Front-End. Atualmente faço cursos de Programador Fullstack JavaScript.
                 </p>
                 <p  class="p2">
-                    Iniciei meus estudos com desenvolvimento web em 2021, sou apaixanado por essa aréa e pretendo seguir minha carreira como Desenvolvedor.
+                    Iniciei meus estudos com desenvolvimento web em 2021, sou apaixonado por essa aréa e pretendo seguir minha carreira como Desenvolvedor.
                 </p>
 
                 <p  class="p3">
