--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <h2>ManagmentEngine</h2>
                 </div>
                 <div class="python box">
-                    <img src="IMG/activedirectory" alt="imagem activedirectory">
+                    <img src="IMG/activedirectory.png" alt="imagem activedirectory">
                     <h2>ActiveDirectory</h2>
                 </div>
                 <div class="material box">
