--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     <h2>Office 365</h2>
                 </div>    
                 <div class="next box">
-                    <img src="IMG/azure.jpg" alt="imagem azure">
+                    <img src="IMG/azuree.png" alt="imagem azure">
                     <h2>Azure</h2>
                 </div>
             </div>
