--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <h2>CrowdStrike</h2>
                 </div>
                 <div class="c box">
-                    <img src="IMG/zoho.png" alt="imagem zoho">
+                    <img src="IMG/zohoo.png" alt="imagem zoho">
                     <h2>ZohoAssist</h2>
                 </div>
                 <div class="sass box">
