--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 </div>
                 <div class="material box">
                     <h2></h2>
-                    <img src="IMG/365.jpg" alt="imagem 365">
+                    <img src="IMG/o365.jpg" alt="imagem 365">
                     <h2>Office 365</h2>
                 </div>    
                 <div class="next box">
