--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 </div>
                 <div class="material box">
                     <h2></h2>
-                    <img src="IMG/of365.jpg" alt="imagem 365">
+                    <img src="IMG/of365.webp" alt="imagem 365">
                     <h2>Office 365</h2>
                 </div>    
                 <div class="next box">
