--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                 </div>
             </div>
 
-            <div class="habi">
+            <div class="teste1">
                 <div class="html box">
                   <img  src="IMG/html.png" alt="imagem html">
                   <h2>HTML5</h2>
