--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         </div>
     </section>
     <!--HABILIDADES-->
-    <section class="habilidades" id="habilidades">
+   <!-- <section class="habilidades" id="habilidades">
         
         <div class="container-habilidades">
            
@@ -247,6 +247,7 @@
 
      </div>
     </section>
+    -->
 
     <!--SERVIÇOS-->
     <section class="services" id="services">
